Fix CV button being collapsed on mobile

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,6 +10,7 @@ a.nav-link {
       animation-duration: 3s;
       animation-iteration-count: infinite;
       animation-fill-mode: forwards;
+      padding: 5px;
 
       &:hover {
         animation-name: selected-link;
